# fb-alert-bot

./: README.md  main.py  marketplace_page.html  pyproject.toml
data/: dataset.py  listings.py
data/processed/: electric_guitar_listings_clean.csv
models/: gradient_boosting_model.pkl  random_forest_model.pkl  random_forest_model_features.pkl  train_model.py
models/linear_regression_model/: guitar_model.pkl
src/: train_model.py
src/dataset/: dataset.py
src/fb-scraper/: remote_scraper.py  scraper.py
